...
        self.navigationItem.rightBarButtonItem = self.editButtonItem
        
        loadPalettes()
        
        // Accessibility
        tableView.accessibilityIdentifier = "palette-table"
        addButton.accessibilityIdentifier = "palette-table-add-button"
        editButtonItem.accessibilityIdentifier = "palette-table-edit-button"
        deleteAllButton.accessibilityIdentifier = "palette-table-delete-all-button"
        
        navigationController?.setToolbarHidden(true, animated: false)
    }
    
    // In a storyboard-based application, you will often want to do a little preparation before navigation
...
